Changelog:
 - svn 338:
   - Started Windows-specific work. In particular, fixed a network bug
     of the showstopper variety, added support for the Windows icon,
     and generated Windows binaries. You may now log in and hash files
     on Windows.
   - Added COPYING, a copy of the GNU GPL, to the repo. I hope people
     do not bear me ill will for explicitly declaring what they may and
     may not do with my code.
   - Added zero.ico, a Windows icon resource, to the repo. Contains
     16x16, 32x32, and 64x64 icons for Windows to use.
   - Added setup.py, a py2exe script for generating Windows binaries.
     I figured you guys should have it. The binaries will be quite
     large, roughly 11MB; I used UPX and gzip to get it down below the
     5MB mark.
   - Updated README to reflect current project status.
 - svn 337:
   - Renamed classes in openanidb.py and fixed indentation issues. If
     I broke anything doing it, let me know.
   - Added formatting help to the settings dialog. This should make the
     cryptic dollar signs a bit less cryptic. Also, if you want or need
     more formatting strings, let me know.
   - Added default actions (Escape, Enter, etc.) to settings dialog.
   - Unbroke previews for formatted strings in settings. I wish that
     someone had told me sooner that they were broken.
   - Unbroke icky hashing logic.
   - Added substitutions for file moves.
   - Added warning if hashing is started while not logged in.
   - Added safety checks to hashing. Hashing will now halt with an
     error box if it does not have permission to move files or make
     directories.
 - svn 326:
   - Added icon(s). For the curious, it's Zero from "Zero no Tsukaima;"
     I felt she was appropriate considering the nature of this project.
     Want to change it? Modify zero.xpm or add your own zero.xpm to
     your .oadb directory.
   - Hooked up username/password save.
   - New settings: Autologin. When selected, the program will